_sass/_search.scss
// Search box
.search {
	position: relative;
	margin-bottom: rem(16px);
	padding: rem(16px);
	color: #fff;
	line-height: 1.5;
	font-size: rem(40px);
	font-weight: 300;
	text-align: center;
	background: #0a84ff;
	transform-origin: top center;
	transition: transform ease-in-out 0.3s, opacity ease-in-out 0.3s;

	@media only screen and (max-width: rem(800px)) {
		font-size: rem(24px);
	}

	@media only screen and (max-width: rem(375px)) {
		font-size: rem(16px);
	}

	.search-form {
		display: grid;
		grid-template-columns: 1fr minmax(0, 2fr) 1fr;

		@media only screen and (max-width: rem(800px)) {
			align-items: center;
			grid-template-columns: auto auto auto;
		}
	}
}

.search-label {
	grid-column: 1;
	grid-row: 1;
	text-align: right;
}

.search-question-mark {
	grid-column: 3;
	grid-row: 1;
	text-align: left;
}

.search-actions {
	grid-row: 2;
	grid-column: 1 / 4;
	margin-top: 1rem;
}

@media only screen and (min-width: rem(801px)) {
	.search-actions {
		display: flex;
		grid-column: 3;
		grid-row: 1;
		align-self: center;
		justify-self: flex-start;
		margin-left: rem(16px);
		margin-top: 0;
	}
}

.search .button {
	margin-left: rem(16px);

	@media only screen and (max-width: rem(375px)) {
		font-size: rem(12px);
	}

	@media only screen and (min-width: rem(801px)) {
		width: max-content;
		height: max-content;
	}
}

.search-input-container {
	position: relative;
	padding: 0 rem(16px);
	width: 100%;
	grid-column: 2;
	grid-row: 1;

	@media only screen and (max-width: rem(800px)) {
		padding-left: rem(8px);
		padding-right: rem(8px);
	}
}

.search-input {
	width: 100%;
	min-width: 0;
	color: inherit;
	font: inherit;
	text-align: center;
	background: none;
	border: none;
	-webkit-appearance: none;
	appearance: none;
	border-bottom: 1px solid #fff;
	border-radius: 0;
	outline: none;

	&:active,
	&:focus {
		background: rgba(255, 255, 255, 0.2);
	}

	&::-webkit-search-cancel-button {
		margin-right: rem(16px);
	}

	&::placeholder {
		color: rgba(255, 255, 255, 0.5);
	}

	@media only screen and (max-width: rem(800px)) {
		margin-right: 0;
		order: 1;
		min-height: rem(36px);
		background: rgba(255, 255, 255, 0.2);
	}
}

.search--loading .search-input-container {
	&::before {
		content: '@';
		display: flex;
		align-items: center;
		justify-content: center;
		width: rem(32px);
		height: rem(32px);
		position: absolute;
		right: rem(16px);
		top: 50%;
		margin-top: rem(-16px);
		font-size: rem(16px);
		border-radius: 50%;
		background: rgba(255, 255, 255, 0.2);
		animation: spin linear 1s infinite;
	}
}

@keyframes spin {
	from { transform: rotate(0); }
	to { transform: rotate(1turn); }
}

.search-empty {
	max-width: rem(1024px);
	margin: rem(16px) auto 0;
	grid-row: 3;
	grid-column: 1 / 4;
	font-size: rem(16px);
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;

	a {
		color: inherit;
	}

	b {
		font-weight: bold;
	}

	.icon {
		margin-right: rem(4px);
		margin-top: rem(4px);
		vertical-align: top;
	}
}

